<?xml version="1.0"?>
<package>
  <name>rqt_graphprofiler</name>
  <version>0.0.1</version>
  <description>The rqt_graphprofiler package</description>
  <maintainer email="dan@osrfoundation.org">Dan Brooks</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/rqt_graphprofiler</url> -->
  <author email="dan@osrfoundation.org">Dan Brooks</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend> -->
  <run_depend>rospy</run_depend>
  <run_depend>ros_topology_msgs</run_depend>
  <run_depend>rosprofiler</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
