<?xml version="1.0"?>
<package>
  <name>rqt_graphprofiler</name>
  <version>0.1.1</version>
  <description>
      An experimental visualization system for anonymous publish subscribe architectures.
  </description>
  <maintainer email="dan@osrfoundation.org">Dan Brooks</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/rqt_graphprofiler</url>
  <url type="repository">http://github.com/osrf/rqt_graphprofiler</url>
  <url type="bugtracker">http://github.com/osrf/rqt_graphprofiler/issues</url>
  <author email="dan@osrfoundation.org">Dan Brooks</author>

  <!-- Disable for now until message are generated -->
  <!--<build_depend>message_generation</build_depend> -->
  <!--<run_depend>message_runtime</run_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>ros_topology_msgs</run_depend>
  <run_depend>rosprofiler</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Uncomment this after it gets added to rosdep 
  <test_depend>python-flake8</test_depend>
  -->

  <export>
      <architecture_independent/>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
